parser.output
Terminals unused in grammar

   T_escape
   T_hex
   UMINUS
   UPLUS


State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: "def" header local_def_star block

    3 local_def_star: local_def local_def_star
    4               | %empty

    5 header: T_id is_data_type_req fparameters_req

    6 is_data_type_req: "is" data_type
    7                 | %empty

    8 fparameters_req: ':' fpar_def comma_fpar_def_star
    9                | %empty

   10 comma_fpar_def_star: ',' fpar_def comma_fpar_def_star
   11                    | %empty

   12 fpar_def: id_plus "as" fpar_type

   13 id_plus: T_id
   14        | T_id id_plus

   15 data_type: "int"
   16          | "byte"

   17 type: data_type brackets_int_const_star

   18 fpar_type: type
   19          | "ref" data_type
   20          | data_type '[' ']' brackets_int_const_star

   21 brackets_int_const_star: '[' T_const ']' brackets_int_const_star
   22                        | %empty

   23 local_def: func_def
   24          | func_decl
   25          | var_def

   26 func_decl: "decl" header

   27 var_def: "var" id_plus "is" type

   28 stmt: "skip"
   29     | l_value T_assign expr
   30     | proc_call
   31     | "exit"
   32     | "return" ':' expr
   33     | "if" cond ':' block elif_and_block_star else_and_block_req
   34     | "loop" id_req ':' block
   35     | "break" colon_id_req
   36     | "continue" colon_id_req

   37 id_req: %empty
   38       | T_id

   39 colon_id_req: ':' T_id
   40             | %empty

   41 elif_and_block_star: "elif" cond ':' block elif_and_block_star
   42                    | %empty

   43 else_and_block_req: "else" ':' block
   44                   | %empty

   45 block: "begin" stmt_plus "end"

   46 stmt_plus: stmt stmt_plus
   47          | stmt

   48 proc_call: T_id colon_expr_req

   49 colon_expr_req: %empty
   50               | ':' expr comma_expr_star

   51 func_call: T_id '(' expr_comma_expr_req ')'

   52 expr_comma_expr_req: %empty
   53                    | expr comma_expr_star

   54 comma_expr_star: %empty
   55                | ',' expr comma_expr_star

   56 l_value: T_id
   57        | T_string
   58        | l_value '[' expr ']'

   59 expr: T_const
   60     | T_char_const
   61     | l_value
   62     | '(' expr ')'
   63     | func_call
   64     | '+' expr
   65     | '-' expr
   66     | expr '+' expr
   67     | expr '-' expr
   68     | expr '*' expr
   69     | expr '/' expr
   70     | expr '%' expr
   71     | "true"
   72     | "false"
   73     | '!' expr
   74     | expr '&' expr
   75     | expr '|' expr

   76 cond: '(' cond ')'
   77     | expr
   78     | "not" cond
   79     | cond "and" cond
   80     | cond "or" cond
   81     | expr '=' expr
   82     | expr "<>" expr
   83     | expr '<' expr
   84     | expr '>' expr
   85     | expr ">=" expr
   86     | expr "<=" expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 73
'%' (37) 70
'&' (38) 74
'(' (40) 51 62 76
')' (41) 51 62 76
'*' (42) 68
'+' (43) 64 66
',' (44) 10 55
'-' (45) 65 67
'/' (47) 69
':' (58) 8 32 33 34 39 41 43 50
'<' (60) 83
'=' (61) 81
'>' (62) 84
'[' (91) 20 21 58
']' (93) 20 21 58
'|' (124) 75
error (256)
"and" (258) 79
"as" (259) 12
"begin" (260) 45
"break" (261) 35
"byte" (262) 16
"continue" (263) 36
"decl" (264) 26
"def" (265) 2
"elif" (266) 41
"else" (267) 43
"end" (268) 45
"exit" (269) 31
"false" (270) 72
"if" (271) 33
"is" (272) 6 27
"int" (273) 15
"loop" (274) 34
"not" (275) 78
"or" (276) 80
"ref" (277) 19
"return" (278) 32
"skip" (279) 28
"true" (280) 71
"var" (281) 27
T_string (282) 57
T_id (283) 5 13 14 38 39 48 51 56
T_const (284) 21 59
"<>" (285) 82
">=" (286) 85
"<=" (287) 86
T_assign (288) 29
T_char_const (289) 60
T_escape (290)
T_hex (291)
UMINUS (292)
UPLUS (293)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
program (57)
    on left: 1, on right: 0
func_def (58)
    on left: 2, on right: 1 23
local_def_star (59)
    on left: 3 4, on right: 2 3
header (60)
    on left: 5, on right: 2 26
is_data_type_req (61)
    on left: 6 7, on right: 5
fparameters_req (62)
    on left: 8 9, on right: 5
comma_fpar_def_star (63)
    on left: 10 11, on right: 8 10
fpar_def (64)
    on left: 12, on right: 8 10
id_plus (65)
    on left: 13 14, on right: 12 14 27
data_type (66)
    on left: 15 16, on right: 6 17 19 20
type (67)
    on left: 17, on right: 18 27
fpar_type (68)
    on left: 18 19 20, on right: 12
brackets_int_const_star (69)
    on left: 21 22, on right: 17 20 21
local_def (70)
    on left: 23 24 25, on right: 3
func_decl (71)
    on left: 26, on right: 24
var_def (72)
    on left: 27, on right: 25
stmt (73)
    on left: 28 29 30 31 32 33 34 35 36, on right: 46 47
id_req (74)
    on left: 37 38, on right: 34
colon_id_req (75)
    on left: 39 40, on right: 35 36
elif_and_block_star (76)
    on left: 41 42, on right: 33 41
else_and_block_req (77)
    on left: 43 44, on right: 33
block (78)
    on left: 45, on right: 2 33 34 41 43
stmt_plus (79)
    on left: 46 47, on right: 45 46
proc_call (80)
    on left: 48, on right: 30
colon_expr_req (81)
    on left: 49 50, on right: 48
func_call (82)
    on left: 51, on right: 63
expr_comma_expr_req (83)
    on left: 52 53, on right: 51
comma_expr_star (84)
    on left: 54 55, on right: 50 53 55
l_value (85)
    on left: 56 57 58, on right: 29 58 61
expr (86)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right:
    29 32 50 53 55 58 62 64 65 66 67 68 69 70 73 74 75 77 81 82 83
    84 85 86
cond (87)
    on left: 76 77 78 79 80 81 82 83 84 85 86, on right: 33 41 76 78
    79 80


State 0

    0 $accept: . program $end

    "def"  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: "def" . header local_def_star block

    T_id  shift, and go to state 4

    header  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

    5 header: T_id . is_data_type_req fparameters_req

    "is"  shift, and go to state 7

    $default  reduce using rule 7 (is_data_type_req)

    is_data_type_req  go to state 8


State 5

    2 func_def: "def" header . local_def_star block

    "decl"  shift, and go to state 9
    "def"   shift, and go to state 1
    "var"   shift, and go to state 10

    $default  reduce using rule 4 (local_def_star)

    func_def        go to state 11
    local_def_star  go to state 12
    local_def       go to state 13
    func_decl       go to state 14
    var_def         go to state 15


State 6

    0 $accept: program $end .

    $default  accept


State 7

    6 is_data_type_req: "is" . data_type

    "byte"  shift, and go to state 16
    "int"   shift, and go to state 17

    data_type  go to state 18


State 8

    5 header: T_id is_data_type_req . fparameters_req

    ':'  shift, and go to state 19

    $default  reduce using rule 9 (fparameters_req)

    fparameters_req  go to state 20


State 9

   26 func_decl: "decl" . header

    T_id  shift, and go to state 4

    header  go to state 21


State 10

   27 var_def: "var" . id_plus "is" type

    T_id  shift, and go to state 22

    id_plus  go to state 23


State 11

   23 local_def: func_def .

    $default  reduce using rule 23 (local_def)


State 12

    2 func_def: "def" header local_def_star . block

    "begin"  shift, and go to state 24

    block  go to state 25


State 13

    3 local_def_star: local_def . local_def_star

    "decl"  shift, and go to state 9
    "def"   shift, and go to state 1
    "var"   shift, and go to state 10

    $default  reduce using rule 4 (local_def_star)

    func_def        go to state 11
    local_def_star  go to state 26
    local_def       go to state 13
    func_decl       go to state 14
    var_def         go to state 15


State 14

   24 local_def: func_decl .

    $default  reduce using rule 24 (local_def)


State 15

   25 local_def: var_def .

    $default  reduce using rule 25 (local_def)


State 16

   16 data_type: "byte" .

    $default  reduce using rule 16 (data_type)


State 17

   15 data_type: "int" .

    $default  reduce using rule 15 (data_type)


State 18

    6 is_data_type_req: "is" data_type .

    $default  reduce using rule 6 (is_data_type_req)


State 19

    8 fparameters_req: ':' . fpar_def comma_fpar_def_star

    T_id  shift, and go to state 22

    fpar_def  go to state 27
    id_plus   go to state 28


State 20

    5 header: T_id is_data_type_req fparameters_req .

    $default  reduce using rule 5 (header)


State 21

   26 func_decl: "decl" header .

    $default  reduce using rule 26 (func_decl)


State 22

   13 id_plus: T_id .
   14        | T_id . id_plus

    T_id  shift, and go to state 22

    $default  reduce using rule 13 (id_plus)

    id_plus  go to state 29


State 23

   27 var_def: "var" id_plus . "is" type

    "is"  shift, and go to state 30


State 24

   45 block: "begin" . stmt_plus "end"

    "break"     shift, and go to state 31
    "continue"  shift, and go to state 32
    "exit"      shift, and go to state 33
    "if"        shift, and go to state 34
    "loop"      shift, and go to state 35
    "return"    shift, and go to state 36
    "skip"      shift, and go to state 37
    T_string    shift, and go to state 38
    T_id        shift, and go to state 39

    stmt       go to state 40
    stmt_plus  go to state 41
    proc_call  go to state 42
    l_value    go to state 43


State 25

    2 func_def: "def" header local_def_star block .

    $default  reduce using rule 2 (func_def)


State 26

    3 local_def_star: local_def local_def_star .

    $default  reduce using rule 3 (local_def_star)


State 27

    8 fparameters_req: ':' fpar_def . comma_fpar_def_star

    ','  shift, and go to state 44

    $default  reduce using rule 11 (comma_fpar_def_star)

    comma_fpar_def_star  go to state 45


State 28

   12 fpar_def: id_plus . "as" fpar_type

    "as"  shift, and go to state 46


State 29

   14 id_plus: T_id id_plus .

    $default  reduce using rule 14 (id_plus)


State 30

   27 var_def: "var" id_plus "is" . type

    "byte"  shift, and go to state 16
    "int"   shift, and go to state 17

    data_type  go to state 47
    type       go to state 48


State 31

   35 stmt: "break" . colon_id_req

    ':'  shift, and go to state 49

    $default  reduce using rule 40 (colon_id_req)

    colon_id_req  go to state 50


State 32

   36 stmt: "continue" . colon_id_req

    ':'  shift, and go to state 49

    $default  reduce using rule 40 (colon_id_req)

    colon_id_req  go to state 51


State 33

   31 stmt: "exit" .

    $default  reduce using rule 31 (stmt)


State 34

   33 stmt: "if" . cond ':' block elif_and_block_star else_and_block_req

    "false"       shift, and go to state 52
    "not"         shift, and go to state 53
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 61

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 64
    cond       go to state 65


State 35

   34 stmt: "loop" . id_req ':' block

    T_id  shift, and go to state 66

    $default  reduce using rule 37 (id_req)

    id_req  go to state 67


State 36

   32 stmt: "return" . ':' expr

    ':'  shift, and go to state 68


State 37

   28 stmt: "skip" .

    $default  reduce using rule 28 (stmt)


State 38

   57 l_value: T_string .

    $default  reduce using rule 57 (l_value)


State 39

   48 proc_call: T_id . colon_expr_req
   56 l_value: T_id .

    ':'  shift, and go to state 69

    T_assign  reduce using rule 56 (l_value)
    '['       reduce using rule 56 (l_value)
    $default  reduce using rule 49 (colon_expr_req)

    colon_expr_req  go to state 70


State 40

   46 stmt_plus: stmt . stmt_plus
   47          | stmt .

    "break"     shift, and go to state 31
    "continue"  shift, and go to state 32
    "exit"      shift, and go to state 33
    "if"        shift, and go to state 34
    "loop"      shift, and go to state 35
    "return"    shift, and go to state 36
    "skip"      shift, and go to state 37
    T_string    shift, and go to state 38
    T_id        shift, and go to state 39

    $default  reduce using rule 47 (stmt_plus)

    stmt       go to state 40
    stmt_plus  go to state 71
    proc_call  go to state 42
    l_value    go to state 43


State 41

   45 block: "begin" stmt_plus . "end"

    "end"  shift, and go to state 72


State 42

   30 stmt: proc_call .

    $default  reduce using rule 30 (stmt)


State 43

   29 stmt: l_value . T_assign expr
   58 l_value: l_value . '[' expr ']'

    T_assign  shift, and go to state 73
    '['       shift, and go to state 74


State 44

   10 comma_fpar_def_star: ',' . fpar_def comma_fpar_def_star

    T_id  shift, and go to state 22

    fpar_def  go to state 75
    id_plus   go to state 28


State 45

    8 fparameters_req: ':' fpar_def comma_fpar_def_star .

    $default  reduce using rule 8 (fparameters_req)


State 46

   12 fpar_def: id_plus "as" . fpar_type

    "byte"  shift, and go to state 16
    "int"   shift, and go to state 17
    "ref"   shift, and go to state 76

    data_type  go to state 77
    type       go to state 78
    fpar_type  go to state 79


State 47

   17 type: data_type . brackets_int_const_star

    '['  shift, and go to state 80

    $default  reduce using rule 22 (brackets_int_const_star)

    brackets_int_const_star  go to state 81


State 48

   27 var_def: "var" id_plus "is" type .

    $default  reduce using rule 27 (var_def)


State 49

   39 colon_id_req: ':' . T_id

    T_id  shift, and go to state 82


State 50

   35 stmt: "break" colon_id_req .

    $default  reduce using rule 35 (stmt)


State 51

   36 stmt: "continue" colon_id_req .

    $default  reduce using rule 36 (stmt)


State 52

   72 expr: "false" .

    $default  reduce using rule 72 (expr)


State 53

   78 cond: "not" . cond

    "false"       shift, and go to state 52
    "not"         shift, and go to state 53
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 61

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 64
    cond       go to state 83


State 54

   71 expr: "true" .

    $default  reduce using rule 71 (expr)


State 55

   51 func_call: T_id . '(' expr_comma_expr_req ')'
   56 l_value: T_id .

    '('  shift, and go to state 84

    $default  reduce using rule 56 (l_value)


State 56

   59 expr: T_const .

    $default  reduce using rule 59 (expr)


State 57

   60 expr: T_char_const .

    $default  reduce using rule 60 (expr)


State 58

   73 expr: '!' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 86


State 59

   64 expr: '+' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 87


State 60

   65 expr: '-' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 88


State 61

   62 expr: '(' . expr ')'
   76 cond: '(' . cond ')'

    "false"       shift, and go to state 52
    "not"         shift, and go to state 53
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 61

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 89
    cond       go to state 90


State 62

   63 expr: func_call .

    $default  reduce using rule 63 (expr)


State 63

   58 l_value: l_value . '[' expr ']'
   61 expr: l_value .

    '['  shift, and go to state 74

    $default  reduce using rule 61 (expr)


State 64

   66 expr: expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   74     | expr . '&' expr
   75     | expr . '|' expr
   77 cond: expr .
   81     | expr . '=' expr
   82     | expr . "<>" expr
   83     | expr . '<' expr
   84     | expr . '>' expr
   85     | expr . ">=" expr
   86     | expr . "<=" expr

    "<>"  shift, and go to state 91
    ">="  shift, and go to state 92
    "<="  shift, and go to state 93
    '+'   shift, and go to state 94
    '-'   shift, and go to state 95
    '|'   shift, and go to state 96
    '*'   shift, and go to state 97
    '/'   shift, and go to state 98
    '%'   shift, and go to state 99
    '&'   shift, and go to state 100
    '='   shift, and go to state 101
    '<'   shift, and go to state 102
    '>'   shift, and go to state 103

    $default  reduce using rule 77 (cond)


State 65

   33 stmt: "if" cond . ':' block elif_and_block_star else_and_block_req
   79 cond: cond . "and" cond
   80     | cond . "or" cond

    "and"  shift, and go to state 104
    "or"   shift, and go to state 105
    ':'    shift, and go to state 106


State 66

   38 id_req: T_id .

    $default  reduce using rule 38 (id_req)


State 67

   34 stmt: "loop" id_req . ':' block

    ':'  shift, and go to state 107


State 68

   32 stmt: "return" ':' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 108


State 69

   50 colon_expr_req: ':' . expr comma_expr_star

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 109


State 70

   48 proc_call: T_id colon_expr_req .

    $default  reduce using rule 48 (proc_call)


State 71

   46 stmt_plus: stmt stmt_plus .

    $default  reduce using rule 46 (stmt_plus)


State 72

   45 block: "begin" stmt_plus "end" .

    $default  reduce using rule 45 (block)


State 73

   29 stmt: l_value T_assign . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 110


State 74

   58 l_value: l_value '[' . expr ']'

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 111


State 75

   10 comma_fpar_def_star: ',' fpar_def . comma_fpar_def_star

    ','  shift, and go to state 44

    $default  reduce using rule 11 (comma_fpar_def_star)

    comma_fpar_def_star  go to state 112


State 76

   19 fpar_type: "ref" . data_type

    "byte"  shift, and go to state 16
    "int"   shift, and go to state 17

    data_type  go to state 113


State 77

   17 type: data_type . brackets_int_const_star
   20 fpar_type: data_type . '[' ']' brackets_int_const_star

    '['  shift, and go to state 114

    $default  reduce using rule 22 (brackets_int_const_star)

    brackets_int_const_star  go to state 81


State 78

   18 fpar_type: type .

    $default  reduce using rule 18 (fpar_type)


State 79

   12 fpar_def: id_plus "as" fpar_type .

    $default  reduce using rule 12 (fpar_def)


State 80

   21 brackets_int_const_star: '[' . T_const ']' brackets_int_const_star

    T_const  shift, and go to state 115


State 81

   17 type: data_type brackets_int_const_star .

    $default  reduce using rule 17 (type)


State 82

   39 colon_id_req: ':' T_id .

    $default  reduce using rule 39 (colon_id_req)


State 83

   78 cond: "not" cond .
   79     | cond . "and" cond
   80     | cond . "or" cond

    "and"  shift, and go to state 104
    "or"   shift, and go to state 105

    $default  reduce using rule 78 (cond)


State 84

   51 func_call: T_id '(' . expr_comma_expr_req ')'

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    $default  reduce using rule 52 (expr_comma_expr_req)

    func_call            go to state 62
    expr_comma_expr_req  go to state 116
    l_value              go to state 63
    expr                 go to state 117


State 85

   62 expr: '(' . expr ')'

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 118


State 86

   66 expr: expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   73     | '!' expr .
   74     | expr . '&' expr
   75     | expr . '|' expr

    '+'  shift, and go to state 94
    '-'  shift, and go to state 95
    '|'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '%'  shift, and go to state 99
    '&'  shift, and go to state 100

    $default  reduce using rule 73 (expr)


State 87

   64 expr: '+' expr .
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   74     | expr . '&' expr
   75     | expr . '|' expr

    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '%'  shift, and go to state 99
    '&'  shift, and go to state 100

    $default  reduce using rule 64 (expr)


State 88

   65 expr: '-' expr .
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   74     | expr . '&' expr
   75     | expr . '|' expr

    '*'  shift, and go to state 97
    '/'  shift, and go to state 98
    '%'  shift, and go to state 99
    '&'  shift, and go to state 100

    $default  reduce using rule 65 (expr)


State 89

   62 expr: '(' expr . ')'
   66     | expr . '+' expr
   67     | expr . '-' expr
   68     | expr . '*' expr
   69     | expr . '/' expr
   70     | expr . '%' expr
   74     | expr . '&' expr
   75     | expr . '|' expr
   77 cond: expr .
   81     | expr . '=' expr
   82     | expr . "<>" expr
   83     | expr . '<' expr
   84     | expr . '>' expr
   85     | expr . ">=" expr
   86     | expr . "<=" expr

    "<>"  shift, and go to state 91
    ">="  shift, and go to state 92
    "<="  shift, and go to state 93
    '+'   shift, and go to state 94
    '-'   shift, and go to state 95
    '|'   shift, and go to state 96
    '*'   shift, and go to state 97
    '/'   shift, and go to state 98
    '%'   shift, and go to state 99
    '&'   shift, and go to state 100
    '='   shift, and go to state 101
    '<'   shift, and go to state 102
    '>'   shift, and go to state 103
    ')'   shift, and go to state 119

    ')'       [reduce using rule 77 (cond)]
    $default  reduce using rule 77 (cond)


State 90

   76 cond: '(' cond . ')'
   79     | cond . "and" cond
   80     | cond . "or" cond

    "and"  shift, and go to state 104
    "or"   shift, and go to state 105
    ')'    shift, and go to state 120


State 91

   82 cond: expr "<>" . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 121


State 92

   85 cond: expr ">=" . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 122


State 93

   86 cond: expr "<=" . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 123


State 94

   66 expr: expr '+' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 124


State 95

   67 expr: expr '-' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 125


State 96

   75 expr: expr '|' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 126


State 97

   68 expr: expr '*' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 127


State 98

   69 expr: expr '/' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 128


State 99

   70 expr: expr '%' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 129


State 100

   74 expr: expr '&' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 130


State 101

   81 cond: expr '=' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 131


State 102

   83 cond: expr '<' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 132


State 103

   84 cond: expr '>' . expr

    "false"       shift, and go to state 52
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 85

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 133


State 104

   79 cond: cond "and" . cond

    "false"       shift, and go to state 52
    "not"         shift, and go to state 53
    "true"        shift, and go to state 54
    T_string      shift, and go to state 38
    T_id          shift, and go to state 55
    T_const       shift, and go to state 56
    T_char_const  shift, and go to state 57
    '!'           shift, and go to state 58
    '+'           shift, and go to state 59
    '-'           shift, and go to state 60
    '('           shift, and go to state 61

    func_call  go to state 62
    l_value    go to state 63
    expr       go to state 64
    cond       go to state 134


State 105

   80 cond: cond "or" . cond
